--- a/Ios Assessment 2/Base.lproj/Main.storyboard
+++ b/Ios Assessment 2/Base.lproj/Main.storyboard
@@ -11,6 +11,68 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Add Location-->
+        <scene sceneID="3o8-0d-aVm">
+            <objects>
+                <viewController id="pqS-8i-NWq" customClass="LocationSetViewController" customModule="Ios_Assessment_2" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KIt-OX-q84">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uVs-bG-omY">
+                                <rect key="frame" x="16" y="87" width="50" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="sWE-Sc-IbJ">
+                                <rect key="frame" x="16" y="116" width="343" height="531"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Bird Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zXH-aJ-uDw">
+                                <rect key="frame" x="102" y="87" width="257" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="RDH-xB-xkB"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add Location" id="p5J-ti-dLz">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="GxZ-7J-Zd9">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="EDE-uc-caC">
+                                <rect key="frame" x="16" y="7" width="34" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <action selector="BackButton:" destination="pqS-8i-NWq" eventType="touchUpInside" id="EKD-Tj-VWa"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="tT2-qF-tNh">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Abw-Ra-nzr">
+                                <rect key="frame" x="329" y="7" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Add"/>
+                                <connections>
+                                    <segue destination="wFl-Xj-6hA" kind="unwind" unwindAction="unwindToMealListWithSender:" id="Rhh-ao-hxb"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="BirdName" destination="zXH-aJ-uDw" id="0IP-n5-agN"/>
+                        <outlet property="MapView" destination="sWE-Sc-IbJ" id="Zp7-7o-B5c"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wwq-Mq-x9f" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="wFl-Xj-6hA" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2711.1999999999998" y="859.52023988005999"/>
+        </scene>
         <!--New Bird-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -163,7 +225,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <exit id="3Hw-my-U5I" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2906.4000000000001" y="86.35682158920541"/>
+            <point key="canvasLocation" x="2436" y="-34"/>
         </scene>
         <!--Current Birds-->
         <scene sceneID="aAB-od-Uez">
@@ -235,6 +297,71 @@
             </objects>
             <point key="canvasLocation" x="852" y="86.806596701649184"/>
         </scene>
+        <!--Select Bird-->
+        <scene sceneID="oyY-Vv-zRu">
+            <objects>
+                <tableViewController id="3SX-rC-sOk" customClass="TableViewController" customModule="Ios_Assessment_2" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="KRI-mB-Izu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.02732834751" green="0.0014138489790000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="separatorColor" red="0.92287603679999997" green="1" blue="0.91819263500000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="sectionIndexBackgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ElementIdentifier" textLabel="Ejo-ai-Tuk" detailTextLabel="ycd-k2-DVf" style="IBUITableViewCellStyleValue1" id="tpe-6b-vLU" customClass="TableViewCell" customModule="Ios_Assessment_2" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tpe-6b-vLU" id="5hD-V9-XWm">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ejo-ai-Tuk">
+                                            <rect key="frame" x="16" y="12" width="33.5" height="20.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ycd-k2-DVf">
+                                            <rect key="frame" x="315" y="12" width="44" height="20.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" red="1" green="0.74072815089999999" blue="0.95166340829999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <outlet property="DetailTest" destination="ycd-k2-DVf" id="e9R-uN-Nhl"/>
+                                    <outlet property="TitleTest" destination="Ejo-ai-Tuk" id="4Tf-41-ze3"/>
+                                    <segue destination="FVk-B0-MHw" kind="showDetail" identifier="SelectBirdLocation" id="lt1-oJ-yJH"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <sections/>
+                        <connections>
+                            <outlet property="dataSource" destination="3SX-rC-sOk" id="N3A-ua-Vta"/>
+                            <outlet property="delegate" destination="3SX-rC-sOk" id="aUn-pC-STE"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Select Bird" id="3Xd-Mk-b00">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="z7G-el-9SG">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="FnA-YM-hXm">
+                                <rect key="frame" x="16" y="7" width="83" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <action selector="BackButton:" destination="3SX-rC-sOk" eventType="touchUpInside" id="9Wv-G8-WX4"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bEP-FS-Mhg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="732" y="860"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="czp-fm-u78">
             <objects>
@@ -255,6 +382,9 @@
                                 <rect key="frame" x="133" y="428" width="90" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Add Location"/>
+                                <connections>
+                                    <segue destination="TMD-yq-9ki" kind="show" id="5V6-Fv-Xy3"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Bird App Start Page" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pby-Ro-5F3">
                                 <rect key="frame" x="158" y="145" width="151" height="21"/>
@@ -306,13 +436,49 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M2B-sU-hkZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1890" y="529"/>
+            <point key="canvasLocation" x="1633" y="-539"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Rsk-kq-CFq">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TMD-yq-9ki" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2HK-5h-jU8">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="3SX-rC-sOk" kind="relationship" relationship="rootViewController" id="ISa-ie-8ZE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qvd-u5-EK6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-87" y="860"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Fpp-09-M2i">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="FVk-B0-MHw" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cns-R4-PMY">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="pqS-8i-NWq" kind="relationship" relationship="rootViewController" id="bFj-7J-3UH"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ubX-Ao-9cb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1772" y="859.52023988005999"/>
         </scene>
     </scenes>
     <resources>
         <image name="IMG_NoImage" width="64" height="64"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Hf4-cn-jnt"/>
+        <segue reference="wNv-P1-puJ"/>
     </inferredMetricsTieBreakers>
 </document>
